--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE HTML>
-<!--
-	Aesthetic by gettemplates.co
-	Twitter: http://twitter.com/gettemplateco
-	URL: http://gettemplates.co
--->
 <html>
 	<head>
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Bitcoin8X</title>
+	<title>bitcoin8x</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Bitcoin8X is a hard fork of bitcoin offering the latest features available in the cryptocurrency space" />
-	<meta name="keywords" content="bitcoin8x, Bitcoin8X" />
+	<meta name="keywords" content="bitcoin8x, bitcoin8x" />
 	<meta name="author" content="bitcoin8x.io" />
 
   	<!-- Facebook and Twitter integration -->
@@ -121,7 +116,7 @@
 							<i class="ti-bookmark-alt"></i>
 						</span>
 						<h3>Smart Contracts</h3>
-						<p>We will be introducing smart contracts into the bitcoin ecosystem. Which will enable us to scale with ease.</p>
+						<p>Introduction of smart contracts into the bitcoin ecosystem will pave the way for the next generation of DAPPs.</p>
 					</div>
 				</div>
 				<div class="feature feature-2 animate-box" data-animate-effect="fadeInUp">
@@ -129,8 +124,8 @@
 						<span class="icon">
 							<i class="ti-layers-alt"></i>
 						</span>
-						<h3>Bigger block size</h3>
-						<p>We will be supporting a bigger 8MB block size.</p>
+						<h3>Big Block Size</h3>
+						<p>8MB block size right after the split.</p>
 					</div>
 				</div>
 				<div class="feature feature-3 animate-box" data-animate-effect="fadeInUp">
@@ -139,7 +134,7 @@
 							<i class="ti-bolt-alt"></i>
 						</span>
 						<h3>Lighting Transactions</h3>
-						<p>We will also be activating lighting transactions for smooth sailing of B8X</p>
+						<p>Activation of lighting transactions for smooth sailing of B8X.</p>
 					</div>
 				</div>
 			</div>
@@ -150,12 +145,12 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Why Bitcoin8x?</h2>
-					<p>With Bitcoin8X we aim to solve problems that other coins/forks just aren't able to cope with. </p>
+					<h2>Why bitcoin8x?</h2>
+					<p>Innovation is our lifestyle. Our aim is to implement the most forward-thinking of bitcoin proposals.</p>
 				</div>
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Our timeline</h2>
-					<p>We will do our best to deliver each and every functionality according to the below timeline.</p>
+					<h2>Roadmap</h2>
+					<p></p>
 				</div>
 			</div>
 
@@ -174,8 +169,8 @@
 						<span class="icon">
 							<i class="ti-menu-alt"></i>
 						</span>
-						<h3>Setting up Pool and Explorer</h3>
-						<p>We will be setting up a pool and an explorer for our users on XX-XX-XXXX</p>
+						<h3>Coming Soon: Explorer</h3>
+						<p>An innovative explorer based on the B8X blockchain will be introduced in March 2018 to serve all of your block-browsing satisfactions.</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -183,8 +178,8 @@
 						<span class="icon">
 							<i class="ti-bookmark-alt"></i><i class="ti-bolt-alt"></i>
 						</span>
-						<h3>Lightning transaction and Smart contracts</h3>
-						<p>Both lightning transactions and smart contracts will be implemented on XX-XX-XXXX</p>
+						<h3>Lightning Network + Smart Contracts</h3>
+						<p>Lightning Protocol and Smart Contracts will be the main goal for development in 2018. Expected release is 2019 Q1 and Q4 respectively. </p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -192,8 +187,8 @@
 						<span class="icon">
 							<i class="ti-lock"></i>
 						</span>
-						<h3>Switching to a PoW/PoS hybrid</h3>
-						<p>We on XX-XX-XXX plan to switch Bitcoin8X's algorithm to a PoW/PoS hybrid.</p>
+						<h3>PoW/PoS Hybrid</h3>
+						<p>PoS functionality to be implemented around Q2 2019</p>
 					</div>
 
 				</div>
@@ -215,8 +210,8 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Exchanges that support us</h2>
-					<p>Below shown are the exchanges that have us listed, get some B8X's and hop on board people!</p>
+					<h2>Exchanges</h2>
+					<p>Buy B8X through the following exchanges</p>
 				</div>
 			</div>
 
@@ -226,28 +221,28 @@
 						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_1.jpg); ">
 							<a href="#" class="color-1">
 								<div class="case-studies-summary">
-									<h2>Example</h2>
+									<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_2.jpg); ">
 							<a href="#" class="color-2">
 								<div class="case-studies-summary">
-<h2>Example</h2>
+<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
 						<li class="one-half animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_3.jpg); ">
 							<a href="#" class="color-3">
 								<div class="case-studies-summary">
-<h2>Example</h2>
+<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
 						<li class="one-half animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_4.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-<h2>Example</h2>
+<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
@@ -255,14 +250,14 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_5.jpg); ">
 							<a href="#" class="color-5">
 								<div class="case-studies-summary">
-<h2>Example</h2>
+<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
 						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_6.jpg); ">
 							<a href="#" class="color-6">
 								<div class="case-studies-summary">
-<h2>Example</h2>
+<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
