--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 						</script>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li class="active"><a onclick="work();" href="#">About</a></li>
+						<li class="active"><a href="#">Downloads</a></li>
 				</div>
 			</div>
 		</div>
@@ -107,39 +108,6 @@
 		</div>
 	</header>
 
-	<div id="gtco-features-3">
-		<div class="gtco-container">
-			<div class="gtco-flex">
-				<div class="feature feature-1 animate-box" data-animate-effect="fadeInUp">
-					<div class="feature-inner">
-						<span class="icon">
-							<i class="ti-bookmark-alt"></i>
-						</span>
-						<h3>Smart Contracts</h3>
-						<p>Introduction of smart contracts into the bitcoin ecosystem will pave the way for the next generation of DAPPs.</p>
-					</div>
-				</div>
-				<div class="feature feature-2 animate-box" data-animate-effect="fadeInUp">
-					<div class="feature-inner">
-						<span class="icon">
-							<i class="ti-layers-alt"></i>
-						</span>
-						<h3>Big Block Size</h3>
-						<p>8MB block size right after the split.</p>
-					</div>
-				</div>
-				<div class="feature feature-3 animate-box" data-animate-effect="fadeInUp">
-					<div class="feature-inner">
-						<span class="icon">
-							<i class="ti-bolt-alt"></i>
-						</span>
-						<h3>Lighting Transactions</h3>
-						<p>Activation of lighting transactions for smooth sailing of B8X.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<div id="gtco-features">
 		<div class="gtco-container">
