--- a/index.html
+++ b/index.html
@@ -162,13 +162,36 @@
 			</div>
 			<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 				<h2>FAQ</h2>
-				<center>
-					<p style="font: larger Arno Pro, Tribun ADF Std, serif; font-style: normal">Why create Bitcoin8X?</p>
-					<p style="font: larger Arno Pro, Tribun ADF Std, serif; font-style: normal">For the betterment of the ecosystem and to introduce killer new features for the consumers of cryptocurrency.</p>
-					<br>
-					<p style="font: larger Arno Pro, Tribun ADF Std, serif; font-style: normal">How many B8X's exist?</p>
-					<p style="font: larger Arno Pro, Tribun ADF Std, serif; font-style: normal">There exists 21,210,000 B8X's. 210,000 B8X's are premined for purpose of further development in the future.</p>
-				</center>
+				<div class="panel-group" id="accordion">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Why create Bitcoin8X?</a>
+                </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse in">
+                <div class="panel-body">
+									For the betterment of the ecosystem and to introduce killer new features for the consumers of cryptocurrency.
+                </div>
+            </div>
+        </div>
+			</div>
+
+			<div class="panel-group" id="accordion">
+					<div class="panel panel-default">
+							<div class="panel-heading">
+									<h4 class="panel-title">
+											<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">How many B8X's exist?</a>
+									</h4>
+							</div>
+							<div id="collapseOne" class="panel-collapse collapse in">
+									<div class="panel-body">
+											There exists 21,210,000 B8X's. 0.9% are premined for purpose of further development in the future.
+									</div>
+							</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</div>
