--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>bitcoin8x</title>
+	<title>Bitcoin8X</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Bitcoin8X is a hard fork of bitcoin offering the latest features available in the cryptocurrency space" />
-	<meta name="keywords" content="bitcoin8x, bitcoin8x" />
+	<meta name="keywords" content="bitcoin8x, Bitcoin8X" />
 	<meta name="author" content="bitcoin8x.io" />
 
   	<!-- Facebook and Twitter integration -->
@@ -105,37 +105,27 @@
 <center>
 							<img href="index.html" src="images/1.png" width="80px" height="80px"><h1 class="animate-box" data-animate-effect="fadeInUp">Bitcoin8X</h1>
 							<h1 class="animate-box" data-animate-effect="fadeInUp">Bigger is always better.</a></h3>
-<<<<<<< HEAD
 							<h3 style="color:orange">Forking at height X<h3>
 								<center>
 									<br><br><br><br>
 			</div>
-=======
-							<h3 style="color:orange">Forking at height X<h3>	
->>>>>>> origin/master
 						</center>
-								<br><br><br><br><br><br>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</header>
-<<<<<<< HEAD
-=======
-
-
->>>>>>> origin/master
 	<div id="gtco-features">
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Why bitcoin8x?</h2>
-					<p>Innovation is our lifestyle. Our aim is to implement the most forward-thinking of bitcoin proposals.</p>
+					<h2>Why Bitcoin8x?</h2>
+					<p>With Bitcoin8X we aim to solve problems that other coins/forks just aren't able to cope with. </p>
 				</div>
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Roadmap</h2>
-					<p></p>
+					<h2>Our timeline</h2>
+					<p>We will do our best to deliver each and every functionality according to the below timeline.</p>
 				</div>
 			</div>
 
@@ -154,8 +144,8 @@
 						<span class="icon">
 							<i class="ti-menu-alt"></i>
 						</span>
-						<h3>Coming Soon: Explorer</h3>
-						<p>An innovative explorer based on the B8X blockchain will be introduced in March 2018 to serve all of your block-browsing satisfactions.</p>
+						<h3>Setting up Pool and Explorer</h3>
+						<p>We will be setting up a pool and an explorer for our users on XX-XX-XXXX</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -163,8 +153,8 @@
 						<span class="icon">
 							<i class="ti-bookmark-alt"></i><i class="ti-bolt-alt"></i>
 						</span>
-						<h3>Lightning Network + Smart Contracts</h3>
-						<p>Lightning Protocol and Smart Contracts will be the main goal for development in 2018. Expected release is 2019 Q1 and Q4 respectively. </p>
+						<h3>Lightning transaction and Smart contracts</h3>
+						<p>Both lightning transactions and smart contracts will be implemented on XX-XX-XXXX</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -172,20 +162,16 @@
 						<span class="icon">
 							<i class="ti-lock"></i>
 						</span>
-						<h3>PoW/PoS Hybrid</h3>
-						<p>PoS functionality to be implemented around Q2 2019</p>
+						<h3>Switching to a PoW/PoS hybrid</h3>
+						<p>We on XX-XX-XXX plan to switch Bitcoin8X's algorithm to a PoW/PoS hybrid.</p>
 					</div>
 
 				</div>
 			</div>
 			<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 				<h2>FAQ</h2>
-<<<<<<< HEAD
 
     <div class="panel-group" id="accordion">
-=======
-				<div class="panel-group" id="accordion">
->>>>>>> origin/master
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -198,26 +184,6 @@
                 </div>
             </div>
         </div>
-<<<<<<< HEAD
-=======
-			</div>
-
-			<div class="panel-group" id="accordion">
-					<div class="panel panel-default">
-							<div class="panel-heading">
-									<h4 class="panel-title">
-											<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">How many B8X's exist?</a>
-									</h4>
-							</div>
-							<div id="collapseOne" class="panel-collapse collapse in">
-									<div class="panel-body">
-											There exists 21,210,000 B8X's. 0.9% are premined for purpose of further development in the future.
-									</div>
-							</div>
-					</div>
-				</div>
-
->>>>>>> origin/master
 			</div>
 
 			<div class="panel-group" id="accordion">
@@ -242,8 +208,8 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Exchanges</h2>
-					<p>Buy B8X through the following exchanges</p>
+					<h2>Exchanges that support us</h2>
+					<p>Below shown are the exchanges that have us listed, get some B8X's and hop on board people!</p>
 				</div>
 			</div>
 
@@ -253,28 +219,28 @@
 						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_1.jpg); ">
 							<a href="#" class="color-1">
 								<div class="case-studies-summary">
-									<h2>TBA</h2>
+									<h2>Example</h2>
 								</div>
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_2.jpg); ">
 							<a href="#" class="color-2">
 								<div class="case-studies-summary">
-<h2>TBA</h2>
+<h2>Example</h2>
 								</div>
 							</a>
 						</li>
 						<li class="one-half animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_3.jpg); ">
 							<a href="#" class="color-3">
 								<div class="case-studies-summary">
-<h2>TBA</h2>
+<h2>Example</h2>
 								</div>
 							</a>
 						</li>
 						<li class="one-half animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_4.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-<h2>TBA</h2>
+<h2>Example</h2>
 								</div>
 							</a>
 						</li>
@@ -282,14 +248,14 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_5.jpg); ">
 							<a href="#" class="color-5">
 								<div class="case-studies-summary">
-<h2>TBA</h2>
+<h2>Example</h2>
 								</div>
 							</a>
 						</li>
 						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_6.jpg); ">
 							<a href="#" class="color-6">
 								<div class="case-studies-summary">
-<h2>TBA</h2>
+<h2>Example</h2>
 								</div>
 							</a>
 						</li>
