--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Bitcoin8X</title>
+	<title>bitcoin8x</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Bitcoin8X is a hard fork of bitcoin offering the latest features available in the cryptocurrency space" />
+	<meta name="description" content="bitcoin8x is a bitcoin hard fork offering the latest features available in the cryptocurrency space" />
 	<meta name="keywords" content="bitcoin8x, Bitcoin8X" />
 	<meta name="author" content="bitcoin8x.io" />
 
@@ -70,7 +70,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-4 col-xs-12">
-					<div id="gtco-logo"><img href="index.html" src="images/1.png" width="40px" height="40px"><a href="index.html">Bitcoin8X</a></div>
+					<div id="gtco-logo"><img href="index.html" src="images/1.png" width="40px" height="40px"><a href="index.html">bitcoin8x</a></div>
 				</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
@@ -103,9 +103,9 @@
 							<center>
 								<div class="popup">
 <center>
-							<img href="index.html" src="images/1.png" width="80px" height="80px"><h1 class="animate-box" data-animate-effect="fadeInUp">Bitcoin8X</h1>
+							<img href="index.html" src="images/1.png" width="80px" height="80px"><h1 class="animate-box" data-animate-effect="fadeInUp">bitcoin8x</h1>
 							<h1 class="animate-box" data-animate-effect="fadeInUp">Bigger is always better.</a></h3>
-							<h3 style="color:orange">Forking at height X<h3>
+							<h3 style="color:orange">Forking @ block height 5?????<h3>
 								<center>
 									<br><br><br><br>
 			</div>
@@ -120,12 +120,12 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Why Bitcoin8x?</h2>
-					<p>With Bitcoin8X we aim to solve problems that other coins/forks just aren't able to cope with. </p>
+					<h2>Why bitcoin8x?</h2>
+					<p>bitcoin8x aims to be the most innovative bitcoin fork there is, enriched with the most forward-thinking bitcoin technologies and proposals. </p>
 				</div>
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Our timeline</h2>
-					<p>We will do our best to deliver each and every functionality according to the below timeline.</p>
+					<h2>Roadmap</h2>
+					<p></p>
 				</div>
 			</div>
 
@@ -190,12 +190,12 @@
 					<div class="panel panel-default">
 							<div class="panel-heading">
 									<h4 class="panel-title">
-											<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">How many B8X's exist?</a>
+											<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">How many B8X coins will exist?</a>
 									</h4>
 							</div>
 							<div id="collapseOne" class="panel-collapse collapse in">
 									<div class="panel-body">
-											There exists 21,210,000 B8X's. 0.9% are premined for purpose of further development in the future.
+											There will exist 21,420,000 B8X coins, 420,000 of which are premined for the purpose of funding further development.
 									</div>
 							</div>
 					</div>
@@ -273,7 +273,7 @@
 				<div class="col-md-4">
 					<div class="gtco-widget">
 						<h3>Thank you for supporting</h3>
-						<p>Bitcoin8X is the result of the efforts of 1000s of individual programmers all around the globe, we truely believe in the power of cryptocurrencies and the good that it can do in our societies.</p>
+						<p>bitcoin8x is the result of the efforts of 1000s of individual programmers all around the globe, we truely believe in the power of cryptocurrencies and the good that it can do in our societies.</p>
 					</div>
 				</div>
 
