--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 							<center>
 								<div class="popup">
 <center>
-							<img href="index.html" src="images/1.png" width="80px" height="80px"><h1 class="animate-box" data-animate-effect="fadeInUp">bitcoin8x</h1>
-							<h1 class="animate-box" data-animate-effect="fadeInUp">Bigger is always better.</a></h3>
+							<img href="index.html" src="images/1.png" width="120px" height="120px"><h1 class="animate-box" data-animate-effect="fadeInUp">bitcoin8x</h1>
+							<h3 class="animate-box" data-animate-effect="fadeInUp">8x the Possibilities</a></h3>
 							<h3 style="color:orange">Forking @ block height 5?????<h3>
 								<center>
 									<br><br><br><br>
@@ -125,7 +125,7 @@
 				</div>
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 					<h2>Roadmap</h2>
-					<p></p>
+					<p>Landscape through the windshield. Will you ride to see it with us?</p>
 				</div>
 			</div>
 
@@ -175,7 +175,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Why create Bitcoin8X?</a>
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">What is bitcoin8x?</a>
                 </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse in">
@@ -273,7 +273,7 @@
 				<div class="col-md-4">
 					<div class="gtco-widget">
 						<h3>Thank you for supporting</h3>
-						<p>bitcoin8x is the result of the efforts of 1000s of individual programmers all around the globe, we truely believe in the power of cryptocurrencies and the good that it can do in our societies.</p>
+						<p>Made with <3 around the globe</p>
 					</div>
 				</div>
 
