--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<div class="popup">
 <center>
 							<img href="index.html" src="images/1.png" width="120px" height="120px"><h1 class="animate-box" data-animate-effect="fadeInUp">bitcoin8x</h1>
-							<h3 class="animate-box" data-animate-effect="fadeInUp">8x the Possibilities</a></h3>
+							<h2 class="animate-box" data-animate-effect="fadeInUp" style="color:white">8x the Possibilities</a></h2>
 							<h3 style="color:orange">Forking @ block height 5?????<h3>
 								<center>
 									<br><br><br><br>
@@ -135,8 +135,9 @@
 						<span class="icon">
 							<i class="ti-vector"></i>
 						</span>
-						<h3>Hard Forking</h3>
-						<p>Forking will be done successfully at height number X and blocksize will be set to 8MB, Strong Replay protection is enabled.</p>
+						<h3>Hard Fork</h3>
+						<h4 style="color:orange">February 2018</h4>
+						<p>Fork the bitcoin blockchain at block height 5?????. Introduction of an 8MB block size and strong replay protection.</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -144,8 +145,9 @@
 						<span class="icon">
 							<i class="ti-menu-alt"></i>
 						</span>
-						<h3>Setting up Pool and Explorer</h3>
-						<p>We will be setting up a pool and an explorer for our users on XX-XX-XXXX</p>
+						<h3>Explorer</h3>
+						<h4 style="color:orange">March 2018</h4>
+						<p>Release a block explorer for the bitcoin8x blockchain</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -153,8 +155,9 @@
 						<span class="icon">
 							<i class="ti-bookmark-alt"></i><i class="ti-bolt-alt"></i>
 						</span>
-						<h3>Lightning transaction and Smart contracts</h3>
-						<p>Both lightning transactions and smart contracts will be implemented on XX-XX-XXXX</p>
+						<h3>Lightning Network</h3>
+						<h4 style="color:orange">Q2 2018</h4>
+						<p>Introduce instant transactions using the Lightning Network</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -162,10 +165,10 @@
 						<span class="icon">
 							<i class="ti-lock"></i>
 						</span>
-						<h3>Switching to a PoW/PoS hybrid</h3>
-						<p>We on XX-XX-XXX plan to switch Bitcoin8X's algorithm to a PoW/PoS hybrid.</p>
+						<h3>PoW/PoS Hybrid</h3>
+						<h4 style="color:orange">Q3 2018</h4>
+						<p>Implement PoS functionality to enable staking</p>
 					</div>
-
 				</div>
 			</div>
 			<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
@@ -195,7 +198,7 @@
 							</div>
 							<div id="collapseOne" class="panel-collapse collapse in">
 									<div class="panel-body">
-											There will exist 21,420,000 B8X coins, 420,000 of which are premined for the purpose of funding further development.
+											bitcoin8x will have a total supply of 21,420,000 coins, of which 420,000 will be pre-mined.
 									</div>
 							</div>
 					</div>
@@ -208,8 +211,8 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Exchanges that support us</h2>
-					<p>Below shown are the exchanges that have us listed, get some B8X's and hop on board people!</p>
+					<h2>Exchanges and Wallets</h2>
+					<p>Get some B8X and become one with the disruption</p>
 				</div>
 			</div>
 
@@ -226,21 +229,21 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_2.jpg); ">
 							<a href="#" class="color-2">
 								<div class="case-studies-summary">
-<h2>Example</h2>
+<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
 						<li class="one-half animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_3.jpg); ">
 							<a href="#" class="color-3">
 								<div class="case-studies-summary">
-<h2>Example</h2>
+<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
 						<li class="one-half animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_4.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-<h2>Example</h2>
+<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
@@ -248,14 +251,14 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_5.jpg); ">
 							<a href="#" class="color-5">
 								<div class="case-studies-summary">
-<h2>Example</h2>
+<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
 						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_6.jpg); ">
 							<a href="#" class="color-6">
 								<div class="case-studies-summary">
-<h2>Example</h2>
+<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
