--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 				<div class="col-md-12 text-right gtco-contact">
 					<ul class="">
 						<li><a href="#"><i class="ti-twitter-alt"></i> </a></li>
-						<li><a href="#"><i class="icon-mail2"></i></a></li>
 						<li><a href="#"><i class="ti-facebook"></i></a></li>
 					</ul>
 				</div>
@@ -181,8 +180,7 @@
                 </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse in">
-                <div class="panel-body">
-									For the betterment of the ecosystem and to introduce killer new features for the consumers of cryptocurrency.
+                <div class="panel-body"> For bitcoin, the days of innovation are long gone. Developers would rather argue than solve problems, even though solutions have been long available. The goal of the bitcoin8x is to preserve rapid innovation and become a melting pot for bitcoin-related technologies and proposals.
                 </div>
             </div>
         </div>
@@ -192,7 +190,7 @@
 					<div class="panel panel-default">
 							<div class="panel-heading">
 									<h4 class="panel-title">
-											<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">How many B8X coins will exist?</a>
+											<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">What is the total supply of B8X?</a>
 									</h4>
 							</div>
 							<div id="collapseOne" class="panel-collapse collapse in">
@@ -221,7 +219,7 @@
 						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_1.jpg); ">
 							<a href="#" class="color-1">
 								<div class="case-studies-summary">
-									<h2>Example</h2>
+									<h2>TBA</h2>
 								</div>
 							</a>
 						</li>
@@ -286,8 +284,7 @@
 					<div class="gtco-widget">
 						<h3>Get In Touch</h3>
 						<ul class="gtco-quick-contact">
-							<li><a href="#"><i class="icon-mail2"></i> bitcoin8x@protonmail.com</a></li>
-							<li><a href="#"><i class="icon-chat"></i> Discord</a></li>
+							<li><a href="#"><i class="icon-chat"></i> Telegram</a></li>
 						</ul>
 					</div>
 				</div>
@@ -303,8 +300,6 @@
 						<ul class="gtco-social-icons pull-right">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
 						</ul>
 					</p>
 				</div>
