--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
 			<div class="row">
 				<div class="col-md-12 text-right gtco-contact">
 					<ul class="">
-						<li><a href="#"><i class="ti-twitter-alt"></i> </a></li>
-						<li><a href="#"><i class="ti-facebook"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -284,7 +282,7 @@
 					<div class="gtco-widget">
 						<h3>Get In Touch</h3>
 						<ul class="gtco-quick-contact">
-							<li><a href="#"><i class="icon-chat"></i> Telegram</a></li>
+							<li><a href="https://t.me/joinchat/Cdau_w8h2c2CYgfwiPQ_gQ"><i class="icon-chat"></i> Telegram</a></li>
 						</ul>
 					</div>
 				</div>
@@ -298,7 +296,7 @@
 					</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://twitter.com/bitcoin8x"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
 						</ul>
 					</p>
