--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-4 col-xs-12">
-					<div id="gtco-logo"><img href="index.html" src="images/1.png" width="40px" height="40px"><a href="index.html">bitcoin8x</a></div>
+					<div id="gtco-logo"><img href="index.html" src="images/1.png" width="40px" height="40px"><a href="index.html">B8X</a></div>
 				</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
