--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<center>
 								<div class="popup">
 <center>
-							<img href="index.html" src="images/1.png" width="180px" height="180px"><h1 class="animate-box" data-animate-effect="fadeInUp">BITCOIN8X</h1>
+							<img href="index.html" src="images/1.png" width="180px" height="180px"><h1 class="animate-box" data-animate-effect="fadeInUp">bitcoin8x</h1>
 							<h1 class="animate-box" data-animate-effect="fadeInUp" style="color:white">8x the Possibilities</a></h1>
 								<center>
 									<br><br><br><br>
