--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 							<center>
 								<div class="popup">
 <center>
-							<img href="index.html" src="images/1.png" width="180px" height="180px"><h1 class="animate-box" data-animate-effect="fadeInUp">Bitcoin8X</h1>
-							<h1 class="animate-box" data-animate-effect="fadeInUp" style="color:white">8x the Possibilities</a></h1>
+							<img href="index.html" src="images/1.png" width="180px" height="180px"><h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Advent Pro';font-size: 22px; color:white">Bitcoin8X</h1>
+							<h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Advent Pro';font-size: 22px; color:white">8x the Possibilities</a></h1>
 								<center>
 									<br><br><br><br>
 			</div>
