--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 					<h2>Exchanges and Wallets</h2>
-					<p>Get some B8X and become one with the disruption</p>
+					<p>Get some B8X and become one participating in the revolution</p>
 				</div>
 			</div>
 
