--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Vollkorn" />
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Advent Pro" />
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Abel"/>
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -101,9 +100,9 @@
 							<center>
 								<div class="popup">
 <center>
-							<img href="index.html" src="images/1.png" width="180px" height="180px"><h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Advent Pro';font-size: 44px; color:white">bitcoin8x</h1>
-							<h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Advent Pro';font-size: 44px; color:white">8x the Possibilities</a></h1>
-							<h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Advent Pro';font-size: 26px; color:orange">Forking at block 5?????</a></h1>		
+							<img href="index.html" src="images/1.png" width="180px" height="180px"><h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 44px; color:white">bitcoin8x</h1>
+							<h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 44px; color:white">8x the Possibilities</a></h1>
+							<h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 26px; color:orange">Forking at block 5?????</a></h1>		
 								<center>
 									<br><br><br><br>
 			</div>
