--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								<div class="popup">
 <center>
 							<img href="index.html" src="images/1.png" width="180px" height="180px"><h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 44px; color:white">bitcoin8x</h1>
-							<h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 44px; color:white">8x the Possibilities</a></h1>
+							<h2 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 44px; color:white">8x the Possibilities</a></h2>
 							<h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 26px; color:orange">Forking at block 5?????</a></h1>		
 								<center>
 									<br><br><br><br>
@@ -117,7 +117,7 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-					<h2>Why bitcoin8x?</h2>
+					<h2>Why B8X?</h2>
 					<p>bitcoin8x aims to be the most innovative bitcoin fork there is, enriched with the most forward-thinking bitcoin technologies and proposals. </p>
 				</div>
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
@@ -179,7 +179,7 @@
                 </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse in">
-                <div class="panel-body"> For bitcoin, the days of innovation are long gone. Developers would rather argue than solve problems, even though solutions have been long available. The goal of the bitcoin8x is to preserve rapid innovation and become a melting pot for bitcoin-related technologies and proposals.
+                <div class="panel-body"> For bitcoin, the days of innovation are long gone. Developers have chosen to argue rather than solving problems, even though proposals with legitimate solutions are already available. The goal of bitcoin8x is to preserve rapid innovation and become a melting pot for bitcoin-related technologies and proposals.
                 </div>
             </div>
         </div>
@@ -208,7 +208,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 					<h2>Exchanges and Wallets</h2>
-					<p>Get some B8X and become one participating in the revolution</p>
+					<p>Get some B8X</p>
 				</div>
 			</div>
 
@@ -298,7 +298,6 @@
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
 							<li><a href="https://twitter.com/bitcoin8x"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
 						</ul>
 					</p>
 				</div>
