--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								<div class="popup">
 <center>
 							<img href="index.html" src="images/1.png" width="180px" height="180px"><h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 44px; color:white">bitcoin8x</h1>
-							<h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 34px; color:white"><i>8x the Possibilities</i></a></h1>
+							<h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 34px; color:white">8x the Possibilities</a></h1>
 							<h1 class="animate-box" data-animate-effect="fadeInUp" style="font-family: 'Abel';font-size: 26px; color:orange">Forking at block 5?????</a></h1>		
 								<center>
 									<br><br><br><br>
