--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						</span>
 						<h3>Hard Fork</h3>
 						<h4 style="color:orange">February 2018</h4>
-						<p>Fork the bitcoin blockchain at block height 5?????. Introduction of an 8MB block size and strong replay protection.</p>
+						<p>Fork the bitcoin blockchain at block height 5?????. Introduction of an 8MB block size and strong replay protection</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
